--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"@radix-ui/react-slider": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
-		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.12",
 		"@radix-ui/react-toast": "^1.2.1",
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
@@ -61,6 +61,7 @@
 		"react-hook-form": "^7.53.0",
 		"react-resizable-panels": "^2.1.3",
 		"recharts": "^2.12.7",
+		"resend": "^4.7.0",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "^3.4.0",
