--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:run": "vitest run"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
@@ -69,5 +72,12 @@
 		"typescript": "^5.9.2",
 		"vaul": "^0.9.9",
 		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.6.4",
+		"@testing-library/react": "^16.3.0",
+		"@vitejs/plugin-react": "^4.7.0",
+		"jsdom": "^26.1.0",
+		"vitest": "^3.2.4"
 	}
 }
