feat(blog): add new articles (spice-islands-to-your-kitchen, sambal-vs-hot-sauce) and migrate dynamic articles (spice-islands-history, ultimate-guide-indonesian-sambal, traditional-sambal-making); chore(hero): use onLoad instead of onLoadingComplete; chore(sitemap): include new blog slugs

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:run": "vitest run",
-		"optimize-images": "node scripts/optimize-images.js"
+		"optimize-images": "node scripts/optimize-images.js",
+		"optimize-blog": "node scripts/optimize-images.js --blog"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
