SEO/domain consistency: enforce non-www canonical + 301 redirect, fix sitemap in robots, replace vercel.app and www references with apex domain, and fix Next 15 page exports causing type errors; build verified

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Other environment variables
-NEXT_PUBLIC_SITE_URL=https://sambal-shop.vercel.app
+NEXT_PUBLIC_SITE_URL=https://spiceislandindonesia.com
