feat: fix UK Exit Intent submission test; add API routes and integration tests; update HeroSection and actions; build+lint pass (1 integration test pending); include app/api/* and enhanced actions

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:run": "vitest run",
+		"test:watch": "vitest --watch",
+		"test:coverage": "vitest run --coverage",
+		"test:backend": "npx tsx scripts/test-backend-connections.ts",
 		"optimize-images": "node scripts/optimize-images.js",
 		"optimize-blog": "node scripts/optimize-images.js --blog"
 	},
