Fix typo: rename smabal->sambal for goreng images and update all references; add product images; update shop and gift-set pages; minor SEO image URL fix

--- a/vercel.json
+++ b/vercel.json
@@ -42,9 +42,9 @@
 		{
 			"source": "(.*)",
 			"has": [
-				{ "type": "host", "value": "www.spiceislandindonesia.com" }
+				{ "type": "host", "value": "spiceislandindonesia.com" }
 			],
-			"destination": "https://spiceislandindonesia.com$1",
+			"destination": "https://www.spiceislandindonesia.com$1",
 			"permanent": true
 		}
 	]
