--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"@testing-library/react": "^16.3.0",
 		"@vitejs/plugin-react": "^4.7.0",
 		"jsdom": "^26.1.0",
+		"lighthouse": "^12.8.1",
 		"sharp": "^0.34.3",
 		"vitest": "^3.2.4"
 	}
