--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ default_ui_darkmode.css
 
 # Claude Code local settings
 .claude/settings.local.json
+settings.local.json
 
 # Lighthouse performance reports
 lighthouse-reports/
