--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "next build && node scripts/fix-css-script-tags.js",
 		"start": "next start",
 		"lint": "next lint",
 		"test": "vitest",
@@ -45,7 +45,7 @@
 		"input-otp": "^1.2.4",
 		"isomorphic-dompurify": "^2.26.0",
 		"lucide-react": "^0.446.0",
-		"next": "^15.4.5",
+		"next": "15.4.7",
 		"next-themes": "^0.3.0",
 		"nodemailer": "^7.0.5",
 		"postcss": "^8.5.6",
